[tool.poetry]
name = "datasets"
version = "0.1.0"
description = "Dataset constructor repo for Columbia-Unilever 2023 capstones."
authors = ["John Anthony Labarga <“john.labarga@unilever.com”>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"
requests = "^2.31.0"
pytest = "^7.4.2"
tqdm = "^4.66.1"
pyarrow = "^13.0.0"

[tool.poetry.dev-dependencies]
pip-system-certs = "^4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
